--- a/main.html
+++ b/main.html
@@ -3,13 +3,25 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<button type="button" id="button-1" class="btn btn-primary">Primary</button>
+<button type="button" id="button-2" class="btn btn-secondary">Secondary</button>
+<button type="button" id="button-3" class="btn btn-success">Success</button>
+<button type="button" id="button-4" class="btn btn-danger">Danger</button>
+<button type="button" id="button-5" class="btn btn-warning">Warning</button>
+<button type="button" id="button-6" class="btn btn-info">Info</button>
+<button type="button" id="button-7" class="btn btn-light">Light</button>
+	<button type="button" id="button-8" class="btn btn-dark">Dark</button>
+
+
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 
 </body>
 
